@@ -4296,11 +4296,50 @@ block|{
 comment|// Doesn't seem right, but tests get in here without initializing the core.
 try|try
 block|{
+while|while
+condition|(
+literal|true
+condition|)
+block|{
 name|backgroundCloser
 operator|.
 name|join
+argument_list|(
+literal|15000
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|backgroundCloser
+operator|.
+name|isAlive
+argument_list|()
+condition|)
+block|{
+synchronized|synchronized
+init|(
+name|solrCores
+operator|.
+name|getModifyLock
+argument_list|()
+init|)
+block|{
+name|solrCores
+operator|.
+name|getModifyLock
+argument_list|()
+operator|.
+name|notifyAll
 argument_list|()
 expr_stmt|;
+comment|// there is a race we have to protect against
+block|}
+block|}
+else|else
+block|{
+break|break;
+block|}
+block|}
 block|}
 catch|catch
 parameter_list|(
